--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^11.3.21",
     "next": "14.2.5",
+    "next-seo": "^6.5.0",
     "react": "^18",
     "react-dom": "^18"
   },
